* fixed problems with mail templates for new Redmine
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@245 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/show.html.erb
@@ -49,7 +49,7 @@
 
 <%= render(:partial => "file_new_revision") if User.current.allowed_to?(:file_manipulation, @file.project) %>
 
-<% form_tag({}, :id => "manipulation_form") do |f| %>
+<% form_tag("", :id => "manipulation_form") do %>
 <% end %>
 
 
