* work on Issue 142: Copy Folder option
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@252 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/edit.html.erb
+++ b/redmine_dmsf/app/views/dmsf/edit.html.erb
@@ -1,7 +1,9 @@
 <% html_title(l(:dmsf)) %>
 
 <div class="contextual">
+	<%= link_to(image_tag("copy.png"), {:controller => :dmsf_folders_copy, :action => "new", :id => @folder }, :title => l(:title_copy)) %>
 </div>
+
 <% create = @pathfolder == @parent %>
 <h2>
 <%= render(:partial => "path", :locals => {:path => @pathfolder.nil? ? [] : @pathfolder.dmsf_path}) %>
