* done Issue 167: Feature Patch: Maximum filesize for email downloads
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@267 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/settings/_dmsf_settings.erb
+++ b/redmine_dmsf/app/views/settings/_dmsf_settings.erb
@@ -15,6 +15,14 @@
 </p>
 
 <p>
+  <%=content_tag(:label, l(:label_maximum_email_filesize) + ":") %>
+  <%=text_field_tag "settings[dmsf_max_email_filesize]", @settings["dmsf_max_email_filesize"], :size=>10 %><br/>
+  (<%=l(:label_default)%>: 0)
+  <br/>
+  <%= l(:note_maximum_email_filesize) %>
+</p>
+
+<p>
   <%=content_tag(:label, l(:label_file_storage_directory) + ":") %>
   <% 
 	storage_dir = @settings["dmsf_storage_directory"].strip
